...
            android:layout_height="80dp"
            android:src="@drawable/ic_quote"
            android:scaleX="-1"
            android:scaleY="-1"/>

        <TextView
            android:id="@+id/txtQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Genius is one percent inspiration is 99%"
            android:textColor="#454545"
            android:textStyle="bold"
...
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/txtNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Next"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:layout_weight=".1"
            android:textColor="@color/white"
...
